--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "todolist1",
+  "name": "todolist",
   "version": "0.0.1",
   "description": "<p align=\"center\">   <a href=\"http://nestjs.com/\" target=\"blank\"><img src=\"https://nestjs.com/img/logo_text.svg\" width=\"320\" alt=\"Nest Logo\" /></a> </p>",
   "author": "",
@@ -23,11 +23,11 @@
   "dependencies": {
     "@nestjs/common": "^9.2.0",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.2.0",
+    "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.2.0",
+    "@nestjs/platform-express": "^8.0.0",
     "@types/multer": "^1.4.7",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
@@ -35,7 +35,6 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "eslint-plugin-sonarjs": "^0.16.0",
-    "husky": "^8.0.2",
     "lint-staged": "^11.0.3",
     "moment": "^2.29.4",
     "mongoose": "^6.7.2",
@@ -59,10 +58,9 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.28.0",
+    "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^8.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -71,7 +69,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "husky": "^8.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -108,5 +107,13 @@
   "directories": {
     "test": "test"
   },
-  "keywords": []
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Zu9zwan9/TodoList.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Zu9zwan9/TodoList/issues"
+  },
+  "homepage": "https://github.com/Zu9zwan9/TodoList#readme"
 }
